--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lite": "lite-server",
     "typings": "typings",
     "postinstall": "typings install",
-     "build:sass": "node-sass app/sass_folder/ -o app/css_folder",
-     "watch:sass": "npm run build:sass && node-sass app/sass_folder/ -wo app/css_folder/"
+    "build:sass": "node-sass app/sass_folder/ -o app/css_folder",
+    "watch:sass": "npm run build:sass && node-sass app/sass_folder/ -wo app/css_folder/"
   },
   "license": "ISC",
   "dependencies": {
@@ -26,15 +26,19 @@
     "@angular/router": "3.0.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
+    "json-server": "^0.11.2",
     "node-sass": "^4.5.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "sass-loader": "^6.0.6",
     "systemjs": "0.19.27",
+    "typings": "^1.5.0",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
+    "connect-history-api-fallback": "^1.3.0",
     "lite-server": "^2.2.0",
     "tslint": "^3.7.4",
     "typescript": "2.3.4",
