--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "crypto-json": "^2.0.0",
     "node-sass": "^4.5.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
